# aiomelcloudhome

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json
.github/workflows/: auto-merge.yml  mkdocs-publishing.yaml  release.yaml  tests.yaml
examples/: example.py
src/aiomelcloudhome/: __init__.py  aiomelcloudhome.py  auth.py  exceptions.py  websocket.py
src/aiomelcloudhome/models/: __init__.py  ata.py  atw.py  context.py  realtime.py  telemetry.py
tests/: __init__.py  conftest.py  syrupy.py  test_aiomelcloudhome.py  test_auth.py  test_authenticate_flow.py  test_client.py  test_client_coverage.py  test_coverage_boost.py  test_models.py  test_realtime.py  test_websocket.py
tests/__snapshots__/: test_aiomelcloudhome.ambr  test_models.ambr  test_realtime.ambr  test_websocket.ambr
tests/fixtures/: actual_telemetry.json  context.json  energy.json  trendsummary.json
